--- a/src/main/webapp/template/web/css/cart.css
+++ b/src/main/webapp/template/web/css/cart.css
@@ -54,6 +54,7 @@ body {
 
 .item__top i {
     font-size: 2rem;
+    margin-left: 20px;
 }
 
 .item__info {
@@ -193,6 +194,9 @@ body {
 }
 
 .price__button__add span {
+    font-family: 'Quicksand' !important;
+}
+.price__button__add a {
     font-family: 'Quicksand' !important;
 }
 
