--- a/src/main/webapp/template/web/css/home.css
+++ b/src/main/webapp/template/web/css/home.css
@@ -106,7 +106,7 @@
 .collection__content__left b {
     font-size: 2.6rem;
     font-weight: 700;
-    font-family: "Quicksand-Bold";
+    /* font-family: "Quicksand-Bold"; */
     letter-spacing: -1.8px;
 }
 
@@ -252,7 +252,7 @@
     width: 1400px;
     height: 650px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-gap: 20px;
     translate: 0px;
     transition: all cubic-bezier(.59,-0.01,.34,1) 0.5s;
@@ -376,8 +376,19 @@
     color: white;
 }
 
+.product__item__price form:first-child {
+    height: 100%;
+    flex: 1.5;
+}
+
+.product__item__price form:last-child {
+    height: 100%;
+    flex: 1;
+}
+
 .price__button__add {
     height: 100%;
+    width: 100%;
     position: relative;
     flex: 1.5;
     text-align: center;
@@ -392,6 +403,7 @@
     transition: all ease-out 0.1s;
     position: relative;
     flex: 1;
+    width: 100%;
     height: 100%;
     color: black;
     text-align: center;
