--- a/src/main/webapp/template/web/css/main.css
+++ b/src/main/webapp/template/web/css/main.css
@@ -84,7 +84,10 @@
 .categ--check i {
     opacity: 1 !important;
 }
-
+a.dropdown_select{
+    text-decoration: none;
+    color: black;
+}
 
 /* Filter */
 
@@ -143,13 +146,20 @@
 }
 
 .filler__box ul {
-    height: 100%; width: 100%;
+    height: 100%; width: 93.5%;
     list-style: none;
-    padding: 0; margin: 0 10px 0;
+    padding: 0 10px; 
+    margin: 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    /* background-color: red; */
+    transition: all 0.3s ease-out;
+}
+
+.filler__box ul:hover {
+    background-color: rgb(238, 238, 238);
 }
 
 .filler__box ul li {
@@ -276,7 +286,7 @@
     margin-top: 50px;
     width: 1200px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 30px;
 }
 
@@ -393,8 +403,19 @@
     color: white;
 }
 
+.product__item__price form:first-child {
+    height: 100%;
+    flex: 1.5;
+}
+
+.product__item__price form:last-child {
+    height: 100%;
+    flex: 1;
+}
+
 .price__button__add {
     height: 100%;
+    width: 100%;
     position: relative;
     flex: 1.5;
     text-align: center;
@@ -402,6 +423,7 @@
     color: white;
     border-radius: 8px;
     border: 0;
+    cursor: pointer;
     z-index: 2;
 }
 
@@ -409,11 +431,13 @@
     transition: all ease-out 0.1s;
     position: relative;
     flex: 1;
+    width: 100%;
     height: 100%;
     color: black;
     text-align: center;
     background-color: white;
     border-radius: 8px;
+    cursor: pointer;
     border: 0;
 }
 
