--- a/src/main/webapp/template/web/css/navbar.css
+++ b/src/main/webapp/template/web/css/navbar.css
@@ -36,6 +36,7 @@ body {
     display: flex; flex-direction: column;
     padding: 55px 10vw;
     padding-bottom: 20px;
+    border-bottom: 0.5px solid rgb(232, 232, 232);
 }
 
 .navbar__top {
@@ -51,7 +52,9 @@ body {
 .navbar__search {
     display: flex;
 }
-
+.btn--form{
+    cursor: pointer;
+}
 .navbar__top input {
     margin-left: 20px;
     align-self: center;
@@ -81,20 +84,25 @@ body {
     display: flex;
 }
 
+.navbar__top__item__right a {
+    color: black;
+    text-decoration: none;
+}
+
 .navbar__top__acc {
     display: flex;
     align-self: center;
     align-items: center;
     /* margin-left: 10px; */
     font-size: 2.3rem;
-    width: 210px;
+    /* width: 210px; */
     overflow: hidden;
 }
 
 .navbar__top__acc span {
     font-size: 1.5rem;
-    /* margin-left: 10px;
-    margin-right: 20px; */
+    margin-left: 10px;
+    margin-right: 20px;
 }
 
 .logged-box {
@@ -201,13 +209,14 @@ body {
     transition: all 0.3s ease-out;
     translate: 0 20px;
     visibility: hidden;
+    z-index: 20;
 }
 
 .product__drop::after {
     content: "";
     top: -40px;
     position: absolute;
-    width: 100%;
+    width: 60%;
     height: 40px;
     /* background-color: red; */
 }
@@ -403,6 +412,11 @@ body {
     text-decoration: none;
     color: #000000;
 }
+.directory span {
+    font-size: 1.3rem;
+    text-decoration: none;
+    color: #000000;
+}
 
 .directory a::after {
     content: '/';
@@ -485,7 +499,33 @@ body {
     width: 100%;
     height: 300px;
     background-color: rgb(19, 19, 19);
-    transform: translateY(-10px);
+    display: flex;
+    color: rgb(160, 160, 160);
+    justify-content: center;
+    gap: 5s0px;
+    font-size: 1.6rem;
+    align-items: center;
+}
+
+.footer__bot-item {
+    display: flex; flex-direction: column;
+    width: 350px;
+    align-items: center;
+    line-height: 25px;
+}
+
+.footer__bot-item span {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.footer__bot-item i {
+    font-size: 1.8rem; margin-right: 10px; align-self: center;
+}
+
+.footer__bot-item b {
+    font-size: 2.2rem;
+    color: white;
 }
 
 @keyframes scaleX2 {
@@ -690,4 +730,44 @@ body {
 .checked {
     display: flex !important;
     animation: fadeUp 0.3s ease-out forwards;
+}
+
+.add--message {
+    position: fixed;
+    bottom: 50px;
+    right: 30px;
+    width: 300px;
+    height: 50px;
+    background-color: white;
+    z-index: 100;
+    border-radius: 5px;
+    font-size: 1.6rem;
+    border-left: 10px solid rgb(202, 232, 126);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 5px rgba(6, 6, 6, 0.205);
+    animation: messagePop 0.4s ease-out, fadeOut ease-out 2s 2s forwards;
+}
+
+.add--message i {
+    color: rgb(169, 198, 98);
+    font-size: 2rem; 
+    margin-right: 10px;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    } to {
+        opacity: 0;
+    }
+}
+
+@keyframes messagePop {
+    from {
+        transform: translateX(400px);
+    } to {
+        transform: translateX(0);
+    }
 }
